Implemented login with GitHub functionality. Job apps viewable per specific user. Bug fixes