@@ -1,61 +1,58 @@
 package com.mindvoyager.mindvoyager.config;
 
-//import org.springframework.context.annotation.Bean;
-//import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-//import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-//import org.springframework.security.web.SecurityFilterChain;
-//
-//@EnableWebSecurity
-//public class SecurityConfig {
-//
-//    @Bean
-//    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-//        http
-//                .authorizeHttpRequests(auth -> auth
-//                        .anyRequest().permitAll()  // Allow all requests without authentication
-//                )
-//                .csrf(csrf -> csrf.disable())  // Disable CSRF protection
-//                .httpBasic(httpBasic -> httpBasic.disable())  // Disable HTTP Basic authentication
-//                .formLogin(formLogin -> formLogin.disable());  // Disable form login
-//
-//        return http.build();
-//    }
-//}
-
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
+@EnableWebSecurity
 public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Enable CORS
-                .csrf(csrf -> csrf.disable()) // Disable CSRF for simplicity in development
-                .authorizeHttpRequests(auth -> auth
-                        .anyRequest().permitAll() // Allow all requests
-                );
-
-        return http.build();
+        return http
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(csrf -> csrf.disable())
+                .authorizeHttpRequests(auth -> {
+                    // Public endpoints
+                    auth.requestMatchers("/", "/error", "/api/public/**").permitAll();
+                    auth.requestMatchers("/oauth2/authorization/**").permitAll();
+                    auth.requestMatchers("/login/oauth2/code/**").permitAll();
+                    auth.requestMatchers("/logout").permitAll();
+                    auth.requestMatchers("/api/auth/logout").permitAll();
+                    
+                    // Protected endpoints
+                    auth.anyRequest().authenticated();
+                })
+                .oauth2Login(oauth2 -> oauth2
+                    .defaultSuccessUrl("http://localhost:3000/dashboard", true)
+                    .failureUrl("http://localhost:3000/?error=true")
+                )
+                .logout(logout -> logout
+                    .logoutSuccessUrl("http://localhost:3000/")
+                    .invalidateHttpSession(true)
+                    .deleteCookies("JSESSIONID")
+                    .permitAll()
+                )
+                .build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000")); // Allow React app
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Allowed HTTP methods
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type")); // Allowed headers
-        configuration.setExposedHeaders(List.of("Authorization")); // Exposed headers for frontend
-        configuration.setAllowCredentials(true); // Allow credentials (e.g., cookies or Authorization header)
-
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
+        configuration.setAllowCredentials(true);
+        configuration.setExposedHeaders(Arrays.asList("Location"));
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
